fix: align the links

--- a/src/components/Aside.module.scss
+++ b/src/components/Aside.module.scss
@@ -55,7 +55,7 @@
   align-items: center;
   gap: 6px;
   height: 36px;
-  padding: 0 8px;
+  padding: 0 10px;
   border-radius: 10px;
   text-decoration: none;
   color: var(--black);
